# data-structure-practice

./: .gitignore  AGENTS.md  README.md  tw-gradcs-data-structures.sln
01-introduction-and-complexity/: README.md
01-introduction-and-complexity/01-asymptotic-notation/: README.md
01-introduction-and-complexity/01-asymptotic-notation/c/: IMPLEMENTATION.md  Makefile  asymptotic_demo.c  asymptotic_demo.h  asymptotic_demo_main.c  test_asymptotic_demo.c
01-introduction-and-complexity/01-asymptotic-notation/cpp/: AsymptoticDemo.hpp  CMakeLists.txt  IMPLEMENTATION.md  asymptotic_demo.cpp  test_asymptotic_demo.cpp
01-introduction-and-complexity/01-asymptotic-notation/csharp/: AsymptoticDemo.cs  AsymptoticNotation.csproj  IMPLEMENTATION.md  NuGet.config  Program.cs
01-introduction-and-complexity/01-asymptotic-notation/java/: AsymptoticDemo.java  AsymptoticDemoTest.java  IMPLEMENTATION.md
01-introduction-and-complexity/01-asymptotic-notation/javascript/: IMPLEMENTATION.md  asymptoticDemo.js  asymptoticDemo.test.js
01-introduction-and-complexity/01-asymptotic-notation/python/: IMPLEMENTATION.md  asymptotic_demo.py  test_asymptotic_demo.py
01-introduction-and-complexity/02-amortized-analysis/: README.md
01-introduction-and-complexity/02-amortized-analysis/c/: IMPLEMENTATION.md  Makefile  amortized_demo.c  amortized_demo.h  amortized_demo_main.c  test_amortized_demo.c
01-introduction-and-complexity/02-amortized-analysis/cpp/: AmortizedDemo.hpp  CMakeLists.txt  IMPLEMENTATION.md  amortized_demo.cpp  test_amortized_demo.cpp
01-introduction-and-complexity/02-amortized-analysis/csharp/: AmortizedDemo.cs  IMPLEMENTATION.md  Program.cs
01-introduction-and-complexity/02-amortized-analysis/java/: AmortizedDemo.java  AmortizedDemoTest.java  IMPLEMENTATION.md
01-introduction-and-complexity/02-amortized-analysis/javascript/: IMPLEMENTATION.md  amortizedDemo.js  amortizedDemo.test.js
01-introduction-and-complexity/02-amortized-analysis/python/: IMPLEMENTATION.md  amortized_demo.py  test_amortized_demo.py
02-arrays-and-linked-lists/: README.md
02-arrays-and-linked-lists/01-array/: README.md
02-arrays-and-linked-lists/01-array/c/: IMPLEMENTATION.md  Makefile  fixed_array.c  fixed_array.h  fixed_array_main.c  test_fixed_array.c
02-arrays-and-linked-lists/01-array/cpp/: CMakeLists.txt  FixedArray.hpp  IMPLEMENTATION.md  fixed_array_demo.cpp  test_fixed_array.cpp
02-arrays-and-linked-lists/01-array/csharp/: FixedArrayDemo.cs  IMPLEMENTATION.md  Program.cs
02-arrays-and-linked-lists/01-array/java/: FixedArrayDemo.java  FixedArrayDemoTest.java  IMPLEMENTATION.md
02-arrays-and-linked-lists/01-array/javascript/: IMPLEMENTATION.md  fixedArrayDemo.js  fixedArrayDemo.test.js
02-arrays-and-linked-lists/01-array/python/: IMPLEMENTATION.md  fixed_array_demo.py  test_fixed_array_demo.py
02-arrays-and-linked-lists/02-dynamic-array/: README.md
02-arrays-and-linked-lists/02-dynamic-array/c/: IMPLEMENTATION.md  Makefile  dynamic_array.c  dynamic_array.h  dynamic_array_main.c  test_dynamic_array.c
02-arrays-and-linked-lists/02-dynamic-array/cpp/: CMakeLists.txt  DynamicArray.hpp  IMPLEMENTATION.md  dynamic_array_demo.cpp  test_dynamic_array.cpp
02-arrays-and-linked-lists/02-dynamic-array/csharp/: DynamicArrayDemo.cs  IMPLEMENTATION.md  Program.cs
02-arrays-and-linked-lists/03-singly-linked-list/: README.md
02-arrays-and-linked-lists/03-singly-linked-list/cpp/: CMakeLists.txt  IMPLEMENTATION.md  SinglyLinkedList.hpp  singly_linked_list_demo.cpp  test_singly_linked_list.cpp
02-arrays-and-linked-lists/04-doubly-linked-list/: README.md
02-arrays-and-linked-lists/04-doubly-linked-list/cpp/: CMakeLists.txt  DoublyLinkedList.hpp  IMPLEMENTATION.md  doubly_linked_list_demo.cpp  test_doubly_linked_list.cpp
02-arrays-and-linked-lists/05-circular-linked-list/: README.md
03-stacks-and-queues/: README.md
03-stacks-and-queues/01-stack/: README.md
03-stacks-and-queues/01-stack/c/: Makefile  (+5 more)
03-stacks-and-queues/01-stack/cpp/: CMakeLists.txt  IMPLEMENTATION.md  Stack.hpp  stack_demo.cpp  test_stack.cpp
03-stacks-and-queues/02-queue/: README.md
03-stacks-and-queues/02-queue/cpp/: CMakeLists.txt  IMPLEMENTATION.md  Queue.hpp  queue_demo.cpp  test_queue.cpp
03-stacks-and-queues/03-circular-queue/: README.md
03-stacks-and-queues/04-deque/: README.md
03-stacks-and-queues/04-deque/cpp/: CMakeLists.txt  Deque.hpp  IMPLEMENTATION.md  deque_demo.cpp  test_deque.cpp
04-hash-tables/: README.md
04-hash-tables/01-basic-hash-table/: README.md
04-hash-tables/01-basic-hash-table/cpp/: CMakeLists.txt  HashTable.hpp  IMPLEMENTATION.md  example_word_count.cpp  test_hash_table.cpp
04-hash-tables/02-collision-resolution/: README.md
04-hash-tables/02-collision-resolution/cpp/: CMakeLists.txt  Chaining.hpp  IMPLEMENTATION.md  OpenAddressing.hpp  test_collision.cpp
04-hash-tables/03-hash-functions/: README.md
04-hash-tables/03-hash-functions/cpp/: CMakeLists.txt  HashFunctions.hpp  IMPLEMENTATION.md  UniversalHashing.hpp  hash_functions_demo.cpp  test_hash_functions.cpp
05-trees-basic/: README.md
05-trees-basic/01-binary-tree/: README.md
05-trees-basic/01-binary-tree/cpp/: BinaryTree.hpp  CMakeLists.txt  IMPLEMENTATION.md  binary_tree_demo.cpp  test_binary_tree.cpp
05-trees-basic/02-binary-search-tree/: README.md
05-trees-basic/02-binary-search-tree/cpp/: BinarySearchTree.hpp  CMakeLists.txt  IMPLEMENTATION.md  bst_demo.cpp  test_bst.cpp
05-trees-basic/03-tree-traversal/: README.md
06-balanced-trees/: README.md
06-balanced-trees/01-avl-tree/: README.md
06-balanced-trees/01-avl-tree/cpp/: AvlTree.hpp  CMakeLists.txt  IMPLEMENTATION.md  avl_demo.cpp  test_avl.cpp
06-balanced-trees/02-red-black-tree/: README.md
06-balanced-trees/02-red-black-tree/cpp/: CMakeLists.txt  IMPLEMENTATION.md  RedBlackTree.hpp  rbt_demo.cpp  test_rbt.cpp
07-heaps-and-priority-queues/: README.md
08-advanced-trees/: README.md
09-disjoint-set/: README.md
10-tries-and-string-structures/: README.md
11-graphs-data-structure/: README.md
12-other-advanced-structures/: README.md
(+312 files in other folders)
